# claude-code-config

./: .gitignore  CLAUDE.md  README.md  install.sh  uninstall.sh
.beads/: issues.jsonl
claude/: CLAUDE.md  settings.json  settings.local.json
claude/agents/: README.md  architecture-contract-designer.md  architecture-devils-advocate.md  code-explainer.md  code-reviewer.md  codex-consultant.md  dataviz-master.md  gameplay-reviewer.md  gemini-consultant.md  gpt5-consultant.md  graphviz-architect.md  memory-knowledge-keeper.md  mermaid-expert.md  multi-perspective-reviewer.md  obsidian-vault-manager.md  pr-description-writer.md  prompt-optimization-specialist.md  python-code-reviewer.md  python-debugger.md  python-test-engineer.md  software-architect.md  tts-status-notifier.md  visual-design-critic.md
claude/commands/: ask-codex.md  ask-gemini.md  ask-gpt5.md  competitive-review.md  docker-optimize.md  draft-pr.md  explain-code.md  journal.md  multi-agent-review.md  notify.md  optimize-prompt.md  save-to-vault.md  tdd.md  test-python.md
claude/skills/speaking/: SKILL.md  pyproject.toml
claude/skills/speaking/scripts/: briefing  listen  speak  test_briefing.py  test_listen.py
claude/skills/speaking/src/speak/: __init__.py  __main__.py
docs/: AGENT_CONSOLIDATION_LOG.md  AGENT_INTEGRATION_AUDIT.md  CLAUDE_FLAT_FILE_MEMORY_SPEC.md  CODEX_SETUP.md  COMMANDS_VS_AGENTS.md  CUSTOMIZATION_DECISION_FRAMEWORK.md  MEMORY_RETRIEVAL_ARCHITECTURE.md  SCHEMAS.md  TOMORROW.md  VISUAL_DESIGN_FEEDBACK_LOOP.md
scripts/: add_tocs_to_refs.py  claude-memory  install.sh  uninstall.sh
(+155 files in other folders)
